# stem-cell-therapy-analysis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: clinical_trial_data.csv
docs/: METHODOLOGY.md  PROGRESS_TRACKER.md  RESEARCH_SESSION_NOTES.md  UNUSUAL_PATTERNS_REPORT.md
notebooks/: 01_statistical_analysis.ipynb  02_correlation_analysis_anomaly_detection.ipynb
src/: __init__.py  anomaly_detector.py  causal_inference.py  data_acquisition.py  monitoring_dashboard.py  monte_carlo_simulation.py  pattern_recognition.py  predictive_modeling.py  statistical_models.py  visualization_engine.py
tests/: __init__.py  test_basic_functionality.py  test_causal_inference.py  test_monitoring_dashboard.py  test_monte_carlo.py  test_predictive_modeling.py  test_statistical_models.py
